--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <div class="banner-img">
-                <img src="../B11A1--assignment-1/assets/hero.png" alt="Soon">
+                <img src="./assets/hero.png" alt="Soon">
             </div>
          </section>
          <!-- pillars -->
@@ -35,22 +35,22 @@
             <h3 class="pillarr">Pillars of "Bangladesh 2.0"</h3>
             <div class="pillar-container">
                 <div class="pillar">
-                    <img src="../B11A1--assignment-1/assets/card-icon.png" alt="soon">
+                    <img src="./assets/card-icon.png" alt="soon">
                     <h4 class="pillar-title">Innovation</h4>
                     <p class="pillar-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos</p>
                 </div>
                 <div class="pillar">
-                    <img src="../B11A1--assignment-1/assets/card-icon.png" alt="soon">
+                    <img src="./assets/card-icon.png" alt="soon">
                     <h4 class="pillar-title">Sustainability</h4>
                     <p class="pillar-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos</p>
                 </div>
                 <div class="pillar">
-                    <img src="../B11A1--assignment-1/assets/card-icon.png" alt="soon">
+                    <img src="./assets/card-icon.png" alt="soon">
                     <h4 class="pillar-title">Infrastructure</h4>
                     <p class="pillar-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos</p>
                 </div>
                 <div class="pillar">
-                    <img src="../B11A1--assignment-1/assets/card-icon.png" alt="soon">
+                    <img src="./assets/card-icon.png" alt="soon">
                     <h4 class="pillar-title">Empowerment</h4>
                     <p class="pillar-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos</p>
                 </div>
@@ -62,19 +62,19 @@
             <p class="vision-peragraph">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
             <div class="vision-container">
                 <div class="vision-1">
-                    <img src="../B11A1--assignment-1/assets/card-icon.png" alt="soon">
+                    <img src="./assets/card-icon.png" alt="soon">
                     <h4 class="vision-title">Digital Transformation</h4>
                     <p class="vision-description">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
                     <button class="vision-btn-1">Learn More</button>
                 </div>
                 <div class="vision-2">
-                    <img src="../B11A1--assignment-1/assets/card-icon.png" alt="soon">
+                    <img src="./assets/card-icon.png" alt="soon">
                     <h4 class="vision-title">Green Energy</h4>
                     <p class="vision-description">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
                     <button class="vision-btn-2">Learn More</button>
                 </div>
                 <div class="vision-3">
-                    <img src="../B11A1--assignment-1/assets/card-icon.png" alt="soon">
+                    <img src="./assets/card-icon.png" alt="soon">
                     <h4 class="vision-title">Modern Infrastructure</h4>
                     <p class="vision-description">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
                     <button class="vision-btn-3">Learn More</button>
@@ -141,11 +141,11 @@
                 <h2>Recent News</h2>
                 <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
                 <div class="news-card">
-                    <img src="../B11A1--assignment-1/assets/satelite.png" alt="Satellite">
+                    <img src="./assets/satelite.png" alt="Satellite">
                     <div class="news-content">
                         <h3>Bangladesh Launches New Satellite</h3>
                         <div class="source">
-                            <img src="../B11A1--assignment-1/assets/al-jazeera.png" alt="Al Jazeera Logo" class="logo">
+                            <img src="./assets/al-jazeera.png" alt="Al Jazeera Logo" class="logo">
                         </div>
                         <p class="date-time">Date: 05/01/2025  Time: 10:25 PM</p>
                         <p class="news-summary">Not until the creation and maintenance of decent conditions of life for all people are recognized...</p>
@@ -153,11 +153,11 @@
                     </div>
                 </div>
                 <div class="news-card reverse">
-                    <img  src="../B11A1--assignment-1/assets/satelite.png" alt="Satellite">
+                    <img  src="./assets/satelite.png" alt="Satellite">
                     <div class="news-content">
                         <h3>Bangladesh Launches New Satellite</h3>
                         <div class="source">
-                            <img src="../B11A1--assignment-1/assets/al-jazeera.png" alt="Al Jazeera Logo" class="logo">
+                            <img src="./assets/al-jazeera.png" alt="Al Jazeera Logo" class="logo">
                         </div>
                         <p class="date-time">Date: 05/01/2025  Time: 10:25 PM</p>
                         <p class="news-summary">
@@ -167,11 +167,11 @@
                     </div>
                 </div>
                 <div class="news-card">
-                    <img src="../B11A1--assignment-1/assets/satelite.png" alt="Satellite">
+                    <img src="./assets/satelite.png" alt="Satellite">
                     <div class="news-content">
                         <h3>Bangladesh Launches New Satellite</h3>
                         <div class="source">
-                            <img src="../B11A1--assignment-1/assets/al-jazeera.png" alt="Al Jazeera Logo" class="logo">
+                            <img src="./assets/al-jazeera.png" alt="Al Jazeera Logo" class="logo">
                         </div>
                         <p class="date-time">Date: 05/01/2025  Time: 10:25 PM</p>
                         <p class="news-summary">
@@ -215,13 +215,13 @@
                 <hr>
                 <div class="social-icons">
                     <a href="#" target="_blank">
-                        <img src="../B11A1--assignment-1/assets/facebook.png" alt="Facebook">
+                        <img src="./assets/facebook.png" alt="Facebook">
                     </a>
                     <a href="#" target="_blank">
-                        <img src="../B11A1--assignment-1/assets/instagram.png" alt="Instagram">
+                        <img src="./assets/instagram.png" alt="Instagram">
                     </a>
                     <a href="#" target="_blank">
-                        <img src="../B11A1--assignment-1/assets/x.png" alt="X (Twitter)">
+                        <img src="./assets/x.png" alt="X (Twitter)">
                     </a>
                 </div>
             </section>
